Don't focus the omnibox when a subframe navigates on NTP.

This fixes a bug where an NTP replacement page from an extension was
losing focus to the omnibox when a subframe on that page committed a
navigation.  So if the user was typing into an <input> on the NTP
replacement page while a subframe navigated, the focus was
disruptively shifted to the omnibox in the middle of typing.

This matters only in OOPIF modes, as focusing of the omnibox was done
in RenderFrameHostManager::CommitPending, which is only used for
cross-process commits.

BUG=700124
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2748103005
Cr-Commit-Position: refs/heads/master@{#457222}

Former-commit-id: 5e8b5e6aebcb564897e311ae4f4397eed3555457